--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>NeirAsso-Game</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animatelo/1.0.3/animatelo.min.js"></script>
+    <style link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></style>
+  </head>
+<body>
 <div id="outer-board">
   <div id="board"> 
     <div id="banner">
@@ -817,3 +827,5 @@
     <button class="btn btn-rounded" id="down"> <i class="fa fas fa-arrow-down"></i></button>
   </div>
 </div>
+</body>
+</html>
