--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>NeirAsso-Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animatelo/1.0.3/animatelo.min.js"></script>
-    <style link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></style>
+    <script src="https://github.com/naskreball/Tetris.github.io/blob/main/script.js"></script>
+    <style link href="https://github.com/naskreball/Tetris.github.io/blob/main/style.css" rel="stylesheet"></style>
   </head>
 <body>
 <div id="outer-board">
